--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,16 +5,19 @@
         </div>
         <div class="col-sm-12 col-md-6">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce est diam, porttitor et arcu at, vehicula
-                sodales libero. Sed fermentum luctus dapibus. Proin lobortis ipsum eu lobortis luctus.
+                Everybody is a dreamer. Everybody wants to do something big. It is a matter of fact that sometimes, we need someone to push us up when we are falling. It doesnt need to be a person, sometimes, books and experiences educate us more than anything. Having a dream is not important. The hardwork we do, how strong we are to let go of the fact that we had to give up on it, matters more. Our page is based on those people's experiences, the suffering they have undergone and the avidity that they carryon to pass their knowledge to the fellow beings. Ultimately, everyone deserves peace. It is all we want! Our page takes you to a tour of your past life, teaches you to take the good things from it and coaches you to embrace your life with all we have while reinforcing you in achieving big things, just like the dreamers that our page bears.
             </p>
         </div>
         <div class="col-sm-12 col-md-6">
+        <blockquote>
             <p>
-                Donec elementum orci dui, eu euismod sem pellentesque sit amet. Nunc tempus consequat urna, vel
-                consectetur odio mattis id. Nam nisi sem, tincidunt id risus et, auctor lacinia nulla. In hac habitasse
-                platea dictumst.
+                <dt>
+                <em>
+                We, the dreamcatchers are here to catch your dreams, turn them into your goals and hasten you to achieve the biggest.
+                </dt>
+                </em>
             </p>
+        </blockquote>
         </div>
     </div>
 </section>
