--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
-    <div class="navbar-brand hidden-xs-down navbar-logo" href="/">{{ site.brand }}</div>
+    <div class="navbar-brand hidden-xs-down navbar-logo" href="/">{{ site.title }}</div>
     <button class="navbar-toggler hidden-sm-up collapsed"
             type="button"
             data-toggle="collapse"
@@ -9,14 +9,14 @@
             aria-label="Toggle navigation">
         &#9776;
     </button>
-    <div class="navbar-brand navbar-brand--mobile hidden-sm-up navbar-logo" href="/">{{ site.brand }}</div>
+    <div class="navbar-brand navbar-brand--mobile hidden-sm-up navbar-logo" href="/">{{ site.title }}</div>
     <div class="collapse navbar-toggleable-xs pull-sm-right" id="CollapsingNavbar">
         <ul class="nav navbar-nav">
             <li class="nav-item">
                 <div class="nav-link" data-link=".container-about">About</div>
             </li>
             <li class="nav-item">
-                <div class="nav-link" data-link=".container-instagram">Portfolio</div>
+                <div class="nav-link" data-link=".container-instagram">Posts</div>
             </li>
             <li class="nav-item">
                 <div class="nav-link" data-link=".container-contacts">Contacts</div>
