point the brand name to our site

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -3,7 +3,7 @@
         <col-md-12>
             <img src="./web-dist/images/profile-image.jpg" class="container-top-image img-circle m-x-auto" alt="{{ site.brand }}">
             <h1 class="container-top-name">
-                {{ site.brand }}
+                <a href="https://www.instagram.com/the_dreamcatcher.4/">  {{ site.brand }}  </a>
             </h1>
             <h2 class="container-top-headline">
                 {{ site.headline }}
