added our hashtag to about

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,6 +17,9 @@
                 </dt>
                 </em>
             </p>
+            <p>
+                Keep a track on our content at <strong><a href="https://www.instagram.com/explore/tags/thedreamcatcher4/">#thedreamcatcher4</a></strong>
+            </p>
         </blockquote>
         </div>
     </div>
