--- a/_includes/top.html
+++ b/_includes/top.html
@@ -5,9 +5,33 @@
             <h1 class="container-top-name">
                 <a href="https://www.instagram.com/the_dreamcatcher.4/">  {{ site.brand }}  </a>
             </h1>
+
             <h2 class="container-top-headline">
                 {{ site.headline }}
             </h2>
+
+            <style>
+            .center {
+                display: block;
+                margin: auto;
+                width: 10%;
+            }
+            </style>
+            <div class="center">
+            <ul class="nav navbar-nav">
+            <li class="nav-item">
+            <a href="https://www.instagram.com/the_dreamcatcher.4/"><img src="./web-dist/images/insta.png"></a>
+            </li>
+
+            <li class="nav-item">
+            <a href="https://plus.google.com/communities/106562435211891053950"><img src="./web-dist/images/gp.png"></a>
+            </li>
+
+            <li class="nav-item">
+            <a href=""><img src="./web-dist/images/tel.png"></a>
+            </li>
+            </ul>
+            </div>
         </col-md-12>
     </div>
 </header>
