adapt to fa icons

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -10,7 +10,7 @@
                 {{ site.headline }}
             </h2>
 
-            <style>
+            <!--<style>
             .center {
                 display: block;
                 margin: auto;
@@ -31,7 +31,16 @@
             <a href=""><img src="./web-dist/images/tel.png"></a>
             </li>
             </ul>
-            </div>
+            </div>-->
+
+            <!-- Add icon library -->
+			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+			<div class="icon-bar">
+  			<a href="https://plus.google.com/communities/106562435211891053950"><i class="fa fa-google-plus"></i></a> 
+  			<a href="https://www.instagram.com/the_dreamcatcher.4/"><i class="fa fa-instagram"></i></a> 
+  			<a href="#"><i class="fa fa-telegram"></i></a>
+			</div>
         </col-md-12>
     </div>
 </header>
