added preload splash screen

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html>
     {% include head.html %}
     <body>
+    	{% include splash.html %}
         {% include navbar.html %}
         {% include top.html %}
         {% include about.html %}
