--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,7 @@
             crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.5/js/tether.min.js"></script>
     <script src="./web-dist/js/bootstrap.min.js"></script>
+    <script src="./web-dist/js/splash.js"></script>
     <script src="https://use.fontawesome.com/266c035ce0.js"></script>
     <script src="./web-dist/js/app.js"></script>
 </head>
