--- a/_includes/top.html
+++ b/_includes/top.html
@@ -3,7 +3,7 @@
         <col-md-12>
             <img src="./web-dist/images/profile-image.jpg" class="container-top-image img-circle m-x-auto" alt="{{ site.brand }}">
             <h1 class="container-top-name">
-                <a href="https://www.instagram.com/the_dreamcatcher.4/">  {{ site.brand }}  </a>
+                <a href="https://www.instagram.com/the_dreamcatcher.4/" rel="noopener noreferrer" target="_blank">  {{ site.brand }}  </a>
             </h1>
 
             <h2 class="container-top-headline">
@@ -37,8 +37,8 @@
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 			<div class="icon-bar">
-  			<a href="https://plus.google.com/communities/106562435211891053950"><i class="fa fa-google-plus"></i></a> 
-  			<a href="https://www.instagram.com/the_dreamcatcher.4/"><i class="fa fa-instagram"></i></a> 
+  			<a href="https://plus.google.com/communities/106562435211891053950" rel="noopener noreferrer" target="_blank"><i class="fa fa-google-plus"></i></a> 
+  			<a href="https://www.instagram.com/the_dreamcatcher.4/" rel="noopener noreferrer" target="_blank"><i class="fa fa-instagram"></i></a> 
   			<a href="#"><i class="fa fa-telegram"></i></a>
 			</div>
         </col-md-12>
