changed colours of contacts pane

--- a/_web-src/scss/theme/_copyright.scss
+++ b/_web-src/scss/theme/_copyright.scss
@@ -2,6 +2,6 @@
 
 .container-copyright {
   padding: $spacer 0 $spacer 0;
-  color: darken($theme-color-main, 50%);
+  color: #fff;
   background: $theme-color-main;
 }
