make tag hyperlink open in newtab

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -18,7 +18,7 @@
                 </em>
             </p>
             <p>
-                Keep a track on our content at <strong><a href="https://www.instagram.com/explore/tags/thedreamcatcher4/">#thedreamcatcher4</a></strong>
+                Keep a track on our content at <strong><a href="https://www.instagram.com/explore/tags/thedreamcatcher4/" rel="noopener noreferrer" target="_blank">#thedreamcatcher4</a></strong>
             </p>
         </blockquote>
         </div>
