setup google data markup

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,5 +1,5 @@
-<section class="container container-about">
-    <div class="row">
+<span itemscope itemtype="http://schema.org/Article"><section class="container container-about">
+    <div itemprop="articleBody" class="row">
         <div class="col-md-12">
             <h1>About</h1>
         </div>
@@ -9,7 +9,6 @@
             </p>
         </div>
         <div class="col-sm-12 col-md-6">
-        <blockquote>
             <p>
                 <dt>
                 <em>
@@ -20,7 +19,7 @@
             <p>
                 Keep a track on our content at <strong><a href="https://www.instagram.com/explore/tags/thedreamcatcher4/" rel="noopener noreferrer" target="_blank">#thedreamcatcher4</a></strong>
             </p>
-        </blockquote>
         </div>
     </div>
 </section>
+</span>
