--- a/_includes/instagram.html
+++ b/_includes/instagram.html
@@ -1,7 +1,7 @@
-<section class="container container-instagram">
+<span itemscope itemtype="http://schema.org/Article"><section class="container container-instagram">
     <div class="row">
         <div class="col-md-12">
-            <h1>Our Recent Posts</h1>
+            <h1 itemprop="articleSection">Our Recent Posts</h1>
         </div>
         <div class="col-md-12">
             <!-- Generate such a widget at snapwidget.com for your name -->
@@ -12,3 +12,4 @@
         </div>
     </div>
 </section>
+</span>
