--- a/_includes/top.html
+++ b/_includes/top.html
@@ -1,9 +1,9 @@
-<header class="container-fluid container-top">
+<span itemscope itemtype="http://schema.org/Article"><header class="container-fluid container-top">
     <div class="row">
         <col-md-12>
-            <img src="./web-dist/images/profile-image.jpg" class="container-top-image img-circle m-x-auto" alt="{{ site.brand }}">
+            <img itemprop="image" src="./web-dist/images/profile-image.jpg" class="container-top-image img-circle m-x-auto" alt="{{ site.brand }}">
             <h1 class="container-top-name">
-                <a href="https://www.instagram.com/the_dreamcatcher.4/" rel="noopener noreferrer" target="_blank">  {{ site.brand }}  </a>
+                <a href="https://www.instagram.com/the_dreamcatcher.4/" rel="noopener noreferrer" target="_blank"> <span itemprop="name"> {{ site.brand }} </span> </a>
             </h1>
 
             <h2 class="container-top-headline">
@@ -38,9 +38,10 @@
 
 			<div class="icon-bar">
   			<a href="https://plus.google.com/communities/106562435211891053950" rel="noopener noreferrer" target="_blank"><i class="fa fa-google-plus"></i></a> 
-  			<a href="https://www.instagram.com/the_dreamcatcher.4/" rel="noopener noreferrer" target="_blank"><i class="fa fa-instagram"></i></a> 
+  			<a itemprop="url" href="https://www.instagram.com/the_dreamcatcher.4/" rel="noopener noreferrer" target="_blank"><i class="fa fa-instagram"></i></a> 
   			<a href="#"><i class="fa fa-telegram"></i></a>
 			</div>
         </col-md-12>
     </div>
 </header>
+</span>
