--- a/_includes/top.html
+++ b/_includes/top.html
@@ -3,7 +3,7 @@
         <col-md-12>
             <img itemprop="image" src="./web-dist/images/profile-image.jpg" class="container-top-image img-circle m-x-auto" alt="{{ site.brand }}">
             <h1 class="container-top-name">
-                <a href="https://www.instagram.com/the_dreamcatcher.4/" rel="noopener noreferrer" target="_blank"> <span itemprop="name"> {{ site.brand }} </span> </a>
+                <a href="https://www.instagram.com/thedreamcatcher4/" rel="noopener noreferrer" target="_blank"> <span itemprop="name"> {{ site.brand }} </span> </a>
             </h1>
 
             <h2 class="container-top-headline">
@@ -38,7 +38,7 @@
 
 			<div class="icon-bar">
   			<a href="https://plus.google.com/communities/106562435211891053950" rel="noopener noreferrer" target="_blank"><i class="fa fa-google-plus"></i></a> 
-  			<a itemprop="url" href="https://www.instagram.com/the_dreamcatcher.4/" rel="noopener noreferrer" target="_blank"><i class="fa fa-instagram"></i></a> 
+  			<a itemprop="url" href="https://www.instagram.com/thedreamcatcher4/" rel="noopener noreferrer" target="_blank"><i class="fa fa-instagram"></i></a> 
   			<a href="#"><i class="fa fa-telegram"></i></a>
 			</div>
         </col-md-12>
