--- a/_includes/splash.html
+++ b/_includes/splash.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html>
-<head>
-</head>
-<body>
-	<div id="loader-wrapper">
-   		<div id="loader"></div>
-
-   		<div class="loader-section section-left"></div>
-   		<div class="loader-section section-right"></div>
-    </div>
-</body>
+	<head>
+		<style type="text/css">
+		h3 {
+			/* The html and body elements cannot have any padding or margin. */
+			font-family: 'Open Sans', sans-serif;
+			font-size: 28px;
+		}
+		.entry-header {
+			text-align: center;
+			margin: auto;
+			position: relative;
+			z-index: 10001;
+		}
+		#demo-content {
+			padding-top: 150px;
+		}
+		</style>
+	</head>
+	<body>
+		<div id="demo-content">
+			<header class="entry-header">
+				<h3>Please wait we are setting up your dreams!</h1>
+			</header>
+		</div>
+		<div id="loader-wrapper">
+   			<div id="loader"></div>
+   			<div class="loader-section section-left"></div>
+   			<div class="loader-section section-right"></div>
+    	</div>
+	</body>
 </html>
