define message colour within html

--- a/_includes/splash.html
+++ b/_includes/splash.html
@@ -6,10 +6,10 @@
 			/* The html and body elements cannot have any padding or margin. */
 			font-family: 'Open Sans', sans-serif;
 			font-size: 28px;
+			color: #fff;
 		}
 		.entry-header {
 			text-align: center;
-			margin: auto;
 			position: relative;
 			z-index: 10001;
 		}
@@ -21,7 +21,7 @@
 	<body>
 		<div id="demo-content">
 			<header class="entry-header">
-				<h3>Please wait we are setting up your dreams!</h1>
+				<h3>Please wait, We are setting up your dreams!</h1>
 			</header>
 		</div>
 		<div id="loader-wrapper">
