--- a/_includes/splash.html
+++ b/_includes/splash.html
@@ -10,7 +10,11 @@
 		}
 		.entry-header {
 			text-align: center;
-			position: relative;
+			padding-top: 30px;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			position: fixed;
 			z-index: 10001;
 		}
 		#demo-content {
