--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -21,6 +21,9 @@
             <li class="nav-item">
                 <div class="nav-link" data-link=".container-contacts">Contacts</div>
             </li>
+            <li class="nav-item">
+                <div class="nav-link"><a href="/blog"><button class="button">Blog</button></div></a>
+            </li>
         </ul>
     </div>
 </nav>
