--- a/_web-src/scss/main.scss
+++ b/_web-src/scss/main.scss
@@ -77,5 +77,5 @@
 @import "theme/contacts";
 @import "theme/copyright";
 @import "theme/icon-bar";
-@import "theme/splash"
+@import "theme/splash";
 
