first post(introvert)

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -37,9 +37,9 @@
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 			<div class="icon-bar">
-  			<a href="https://plus.google.com/communities/106562435211891053950" rel="noopener noreferrer" target="_blank"><i class="fa fa-google-plus"></i></a> 
-  			<a itemprop="url" href="https://www.instagram.com/thedreamcatcher4/" rel="noopener noreferrer" target="_blank"><i class="fa fa-instagram"></i></a> 
-  			<a href="#"><i class="fa fa-telegram"></i></a>
+  			<a href="https://plus.google.com/communities/106562435211891053950" title="Our G+ Community" rel="noopener noreferrer" target="_blank"><i class="fa fa-google-plus"></i></a> 
+  			<a itemprop="url" href="https://www.instagram.com/thedreamcatcher4/" title="Our Instagram Profile" rel="noopener noreferrer" target="_blank"><i class="fa fa-instagram"></i></a> 
+  			<a href="/blog" title="Our Blog"><i class="fa fa-newspaper-o"></i></a>
 			</div>
         </col-md-12>
     </div>
