--- a/_includes/head-dark.html
+++ b/_includes/head-dark.html
@@ -6,6 +6,7 @@
     if ((host == window.location.host) && (window.location.protocol != "https:"))
         window.location.protocol = "https";
 </script>
+<script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us15.list-manage.com","uuid":"bec211ac5ed1f5cbad9327fbb","lid":"f5f11815f9"}) })</script>
 <title>{% if page.title %}{{ page.title }} &#8211; {% endif %}{{ site.title-blog }}</title>
 <link rel="canonical" href=" { { site.url } }{ { page.url } }" />
 <meta name="description" content="{{ page.description-blog }}">
