replaced hashtag with profile link

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,7 +17,7 @@
                 </em>
             </p>
             <p>
-                Keep a track on our content at <strong><a href="https://www.instagram.com/explore/tags/thedreamcatcher4/" rel="noopener noreferrer" target="_blank">#thedreamcatcher4</a></strong>
+                Follow us on instagram <strong><a href="https://www.instagram.com/thedreamcatcher4/" rel="noopener noreferrer" target="_blank">@thedreamcatcher4</a></strong>
             </p>
         </div>
     </div>
