adapt jasper theme for blog page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,6 @@
         {% include instagram.html %}
         {% include contacts.html %}
         {% include copyright.html %}
-        {% include tracking.html %}
+        {% include analytics.html %}
     </body>
 </html>
