--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -9,8 +9,8 @@
         <li class="nav-article {% if page.url contains 'Article' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}tag/article">Articles</a></li>
         
         <ul>
-        <h3 class="nav-auth">Authors</h3>
-            <li class="nav-author {% if page.current == 'author' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}author/casper">Author</a></li>
+        <h3 class="nav-auth"> Authors </h3>
+            <li class="nav-author" role="presentation"><a href="{{ site.baseurl }}author/ganesh">Ganesh Varma</a></li>
         </ul>
     </ul>
     <a class="subscribe-button" href="/">Main Site</a>
