--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -25,20 +25,36 @@ current: author
     </header>
 
     <section class="author-profile inner">
-        {% if site.image %}
-        <figure class="author-image">
-            <div class="img" style="background-image: url({{ site.baseurl }}{{ site.image }})"><span class="hidden">{{ site.author }}'s Picture</span></div>
+       {% if site.data.authors[page.author].image %}
+       <figure class="author-image">
+            <div class="img" style="background-image: url({{ site.data.authors[page.author].image }})">
+                <span class="hidden">{{ site.data.authors[page.author].nickname }}'s Picture</span>
+            </div>
         </figure>
-        {% endif %}
-        <h1 class="author-title">{{ site.author }}</h1>
-        {% if site.bio %}
-            <h2 class="author-bio">{{ site.bio }}</h2>
-        {% endif %}
+       {% endif %}
+       <h1 class="author-title">{{ site.data.authors[page.author].nickname }}</h1>
+         {% if site.bio %}
+            <h2 class="author-bio">{{ site.data.authors[page.author].bio }}</h2>
+         {% endif %}
         <div class="author-meta">
-            {% if site.location %}<span class="author-location icon-location">{{ site.location }}</span>{% endif %}
-            {% if site.url %}<span class="author-link icon-link"><a href="{{ site.url }}">{{ site.short_url }}</a></span>{% endif %}
+             {% if site.data.authors[page.author].location %}
+                 <span class="author-location icon-location">{{ site.data.authors[page.author].location }}</span>
+            {% endif %}
+
+            {% if site.data.authors[page.author].url %}
+               <span class="author-link icon-link"><a href="{{ site.data.authors[page.author].url }}">{{ site.data.authors[page.author].short_url }}</a></span>
+            {% endif %}
             <!-- <span class="author-stats"><i class="icon-stats"></i> [[plural ../pagination.total empty='No posts' singular='% post' plural='% posts']]</span> -->
-            <span class="author-stats"><i class="icon-stats"></i>{% if paginator.total_posts == 0 %}No posts{% elsif paginator.total_posts == 1 %}1 post{% else %}{{ paginator.total_posts }} posts{% endif %}</span>
+            <span class="author-stats">
+               <i class="icon-stats"></i>
+                {% if paginator.total_posts == 0 %}
+                    No posts
+                {% elsif paginator.total_posts == 1 %}
+                    1 post
+                {% else %}
+                    {{ paginator.total_posts }} posts
+                {% endif %}
+            </span>
         </div>
     </section>
 <!-- /author -->
