--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -891,7 +891,7 @@ body.nav-opened .nav {
     font-weight: 400;
     font-family: "Merriweather", serif;
     letter-spacing: 0.01rem;
-    color: rgba(255,255,255,0.8);
+    color: #fff;
 }
 
 .no-cover.main-header {
