added authors to menu

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -10,7 +10,10 @@
         
         <ul>
         <h3 class="nav-auth"> Authors </h3>
+            <li class="nav-author" role="presentation"><a href="{{ site.baseurl }}author/unnati">Unnati Sharma</a></li>
             <li class="nav-author" role="presentation"><a href="{{ site.baseurl }}author/ganesh">Ganesh Varma</a></li>
+            <li class="nav-author" role="presentation"><a href="{{ site.baseurl }}author/siddhartha">Siddhartha Vidhyadharaa</a></li>
+            <li class="nav-author" role="presentation"><a href="{{ site.baseurl }}author/akhil">Akhil</a></li>
         </ul>
     </ul>
     <a class="subscribe-button" href="/">Main Site</a>
