--- a/_includes/head-blog.html
+++ b/_includes/head-blog.html
@@ -1,19 +1,25 @@
-    <link rel="canonical" href="{{ site.baseurl }}" />
+    <script type="text/javascript">
+     var host = "thedreamcatcher4.me";
+     if ((host == window.location.host) && (window.location.protocol != "https:"))
+         window.location.protocol = "https";
+    </script>
+
+    <link rel="canonical" href=" { { site.url } }{ { page.url } }" />
     <meta name="referrer" content="origin" />
-    <link rel="next" href="{{ site.baseurl }}page2/" />
+    <link rel="next" href="{{ site.baseurl }}blog/page2/" />
 
     <meta property="og:site_name" content="{{ site.name }}" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="{{ site.name }}" />
     <meta property="og:description" content="{{ site.description-blog }}" />
     <meta property="og:url" content="{{ site.baseurl }}" />
-    <meta property="og:image" content="{{ site.baseurl }}assets/images/cover1.jpg" />
+    <meta property="og:image" content="{{ site.baseurl }}assets/images/dream-catcher.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="{{ site.name }}" />
     <meta name="twitter:description" content="{{ site.description-blog }}" />
     <meta name="twitter:url" content="{{ site.baseurl }}" />
-    <meta name="twitter:image:src" content="{{ site.baseurl }}assets/images/cover1.jpg" />
+    <meta name="twitter:image:src" content="{{ site.baseurl }}assets/images/dream-catcher.jpg" />
 
     <script type="application/ld+json">
 {
@@ -21,7 +27,7 @@
     "@type": "Website",
     "publisher": "TheDreamcatcher4 Blog",
     "url": "{{ site.baseurl }}",
-    "image": "{{ site.baseurl }}assets/images/cover1.jpg",
+    "image": "{{ site.baseurl }}assets/images/dream-catcher.jpg",
     "description": "{{ site.description-blog }}"
 }
     </script>
